# health-check

./: CMakeLists.txt  go.mod  go.sum
cmd/: CMakeLists.txt
cmd/health/: main.go
pkg/health/: connections.go  handlers.go  ping.go  rest_client.go  server.go  system_checks.go  utils.go
ui/: CMakeLists.txt  pluggable-ui-health.json.in
ui/health-ui/: connectivity.html  head.frag.html  health.html  health.js  healthService.js  health_controller.js  summary.html
